<resources>
    <string name="app_name">Temp Control</string>
    <string name="action_settings">Settings</string>
    <string name="base_Url">192.168.1.120</string>
    <string name="start_timestamp">1524300000</string>
    <string name="stop_timestamp">1524345000</string>
    <string name="hello">Hello User! Start scan or query.</string>
    <string name="query_result">Query result:</string>
    <string name="reset">Reset</string>
    <string name="query">Query</string>
    <string name="set_server_ip">Set Server IP</string>
    <string name="stop_the_scan">Stop the scan</string>
    <string name="stop">Stop</string>
    <string name="start_the_scan">Start the scan</string>
    <string name="start">Start</string>
    <string name="error_server_ip">Error: Server IP not in xxx.xxx.xxx.xxx form!</string>
    <string name="ip_updated">Server IP updated...</string>
    <string name="scansione">Scansione: \n</string>
    <string name="stop_timestamp_view">Stop Timestamp</string>
    <string name="start_timestamp_view">Start Timestamp</string>
</resources>
