<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/vert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="24sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/start"
                        android:focusableInTouchMode="true"
                        android:focusable="true"
                        android:layout_width="0dip"
                        android:layout_weight=".50"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/start_the_scan"
                        android:text="@string/start" />

                    <Button
                        android:id="@+id/stop"
                        android:layout_width="0dip"
                        android:layout_weight=".50"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/stop_the_scan"
                        android:text="@string/stop" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/setServerIP"
                        android:layout_width="0dip"
                        android:layout_weight=".50"
                        android:layout_height="wrap_content"
                        android:text="@string/set_server_ip" />

                    <EditText
                        android:id="@+id/serverIP"
                        android:layout_width="0dip"
                        android:layout_weight=".50"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:digits="0123456789."
                        android:text="@string/base_Url" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/queryButton"
                        android:layout_width="0dip"
                        android:layout_weight=".50"
                        android:layout_height="wrap_content"
                        android:text="@string/query" />

                    <Button
                        android:id="@+id/reset"
                        android:layout_width="0dip"
                        android:layout_weight=".50"
                        android:layout_height="wrap_content"
                        android:text="@string/reset" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/startTimestampView"
                        android:layout_height="wrap_content"
                        android:layout_width="0dip"
                        android:layout_weight=".50"
                        android:gravity="center"
                        android:text="@string/start_timestamp_view" />

                    <TextView
                        android:id="@+id/stopTimestampView"
                        android:layout_height="wrap_content"
                        android:layout_width="0dip"
                        android:layout_weight=".50"
                        android:gravity="center"
                        android:text="@string/stop_timestamp_view" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/timestampFrom"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight=".50"
                        android:gravity="center"
                        android:inputType="number"
                        android:text="@string/start_timestamp" />

                    <EditText
                        android:id="@+id/timestampTo"
                        android:layout_width="0dip"
                        android:layout_weight=".50"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="@string/stop_timestamp" />

                </LinearLayout>

                <TextView
                    android:layout_marginTop="10dp"
                    android:id="@+id/vedi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:typeface="monospace"
                    android:text="@string/hello" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>
